# fastapi-eshop

./: .gitignore  README.md  alembic.ini  database.db  pyproject.toml
app/: api.py  schemas.py
app/backend/: db.py  db_depends.py
app/migrations/: env.py
app/migrations/versions/: 1a770c21b2d5_create_user_model.py  9f7470587efc_create_review_model.py  a32a112f7c33_initial_migration.py  e27cc093e8d6_initial_migration.py
app/models/: __init__.py  categories.py  products.py  review.py  user.py
app/routers/: auth.py  categories.py  products.py  reviews.py
