[tool.poetry]
name = "fastapi_eshop"
version = "0.1.0"
description = ""
authors = ["Dmitry Samofalov <samdimus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
sqlalchemy = "^2.0.38"
alembic = "^1.15.1"
python-slugify = "^8.0.4"
flake8 = "^7.1.2"
asyncpg = "^0.30.0"
passlib = "^1.7.4"
bcrypt = "4.0.1"
python-multipart = "^0.0.20"
dotenv = "^0.9.9"
pyjwt = "^2.10.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
